; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_vaapi.c_va_fourcc_to_imgfmt.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_vaapi.c_va_fourcc_to_imgfmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fmtentry = type { i64, i32 }

@va_to_imgfmt = common dso_local global %struct.fmtentry* null, align 8
@IMGFMT_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @va_fourcc_to_imgfmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @va_fourcc_to_imgfmt(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.fmtentry*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load %struct.fmtentry*, %struct.fmtentry** @va_to_imgfmt, align 8
  store %struct.fmtentry* %5, %struct.fmtentry** %4, align 8
  br label %6

6:                                                ; preds = %22, %1
  %7 = load %struct.fmtentry*, %struct.fmtentry** %4, align 8
  %8 = getelementptr inbounds %struct.fmtentry, %struct.fmtentry* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %6
  %12 = load %struct.fmtentry*, %struct.fmtentry** %4, align 8
  %13 = getelementptr inbounds %struct.fmtentry, %struct.fmtentry* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %3, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load %struct.fmtentry*, %struct.fmtentry** %4, align 8
  %19 = getelementptr inbounds %struct.fmtentry, %struct.fmtentry* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  store i32 %20, i32* %2, align 4
  br label %27

21:                                               ; preds = %11
  br label %22

22:                                               ; preds = %21
  %23 = load %struct.fmtentry*, %struct.fmtentry** %4, align 8
  %24 = getelementptr inbounds %struct.fmtentry, %struct.fmtentry* %23, i32 1
  store %struct.fmtentry* %24, %struct.fmtentry** %4, align 8
  br label %6

25:                                               ; preds = %6
  %26 = load i32, i32* @IMGFMT_NONE, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %17
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
